--- a/style.css
+++ b/style.css
@@ -1,1 +1,16 @@
+.principal {
+  background-image: url("fundo.png");
+  background-repeat: no-repeat;
+  background-size: 100% ;
+  display: flex;
+  align-items: center;
+  text-align: center; 
+}
+
+.caixa {
+  width: 940px;
+  height: 200px;
+  margin: 0 auto;
+  backdrop-filter: blur(10px);
+}
 
