--- a/style.css
+++ b/style.css
@@ -1,16 +1,68 @@
+body {
+  background-color: black;
+}
+
 .principal {
   background-image: url("fundo.png");
   background-repeat: no-repeat;
-  background-size: 100% ;
+  background-size: 100%;
   display: flex;
   align-items: center;
   text-align: center; 
+  height: 100vh;
+ 
+
 }
 
 .caixa {
   width: 940px;
-  height: 200px;
+  height: 350px;
+  border-radius: 20px;
   margin: 0 auto;
   backdrop-filter: blur(10px);
+  
 }
 
+* {
+margin: 0;
+padding: 0;
+border: 0;
+}
+
+.icone1 {
+  align-items: center;
+  text-align: center;
+
+}
+
+.icone2 {
+  align-items: center;
+  text-align: center;
+
+}
+.icone3 {
+  align-items: center;
+  text-align: center;
+
+}
+.icone4 {
+  align-items: center;
+  text-align: center;
+
+}
+.icone5 {
+  align-items: center;
+  text-align: center;
+
+}
+
+.container {
+  
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 5%;
+
+}
+ 
