--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   align-items: center;
   text-align: center; 
   height: 100vh;
+  
  
 
 }
@@ -29,40 +30,13 @@ padding: 0;
 border: 0;
 }
 
-.icone1 {
+.icone_pagina {
   align-items: center;
   text-align: center;
-
-}
-
-.icone2 {
-  align-items: center;
-  text-align: center;
-
-}
-.icone3 {
-  align-items: center;
-  text-align: center;
-
-}
-.icone4 {
-  align-items: center;
-  text-align: center;
-
-}
-.icone5 {
-  align-items: center;
-  text-align: center;
-
-}
-
-.container {
-  
-  width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  border: 5%;
+  
 
 }
  
