--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .principal {
-  background-image: url("fundo.png");
+  background-image: url("tcrado.png");
   background-repeat: no-repeat;
   background-size: 100%;
   display: flex;
@@ -16,11 +16,14 @@ body {
 }
 
 .caixa {
-  width: 940px;
-  height: 350px;
+  width: 1250px;
+  height: 250px;
   border-radius: 20px;
   margin: 0 auto;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(5px);
+ 
+
+
   
 }
 
@@ -37,6 +40,5 @@ border: 0;
   justify-content: center;
   align-items: center;
   
-
 }
- 
+
