--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ border: 0;
   width: 250px;
 }
 
-@media (max-width: 900px) {
+@media (min-width: 900px) {
   body {
     background-color: rgb(212, 32, 32);
     background-image:url("tclaro.png") ;
