--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ border: 0;
   width: 250px;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 1085px) {
   body {
     background-color: rgb(0, 0, 0);
     background-image:url("tclaro.png") ;
@@ -82,5 +82,59 @@ border: 0;
       align-items: center;
       flex-direction: column;
     }
+
+    }
+
+    @media (max-width: 900px) {
+
+      body {
+        background-color: black;
+        background-image:url("tcrado.png") ;
+        background-repeat: no-repeat;
+        align-items: center;
+        height: 100%;
+        background-attachment: scroll;
+        }
+      
+      .principal {
+        display: flex;
+        
+        align-items: center;
+        text-align: center; 
+        height: 100vh;
+        
+       
+      
+      }
+      
+      .caixa {
+        height: 250px;
+        border-radius: 20px;
+        margin: 0 auto;
+        backdrop-filter: blur(5px);
+        flex-wrap: wrap;
+        background-color: rgba(0, 0, 0, 0.7);
+        
+      }
+      
+      * {
+      margin: 0;
+      padding: 0;
+      border: 0;
+      }
+      
+      .icone_pagina {
+        align-items: center;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       
+      }
+      
+      .icone img{
+        padding: 20px;
+        width: 250px;
+      }
 
     }
