--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ border: 0;
 @media (max-width: 1080px) {
   body {
     background-color: rgb(0, 0, 0);
-    background-image:url("tclaro.png") ;
+    background-image:url("celular.jpg");
     background-repeat: no-repeat;
     align-items: center;
     background-size: cover;
